--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "file-loader": "^0.11.2",
+    "html": "^1.0.0",
+    "image-webpack-loader": "^3.4.2",
+    "loader": "^2.1.1",
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.6.0"
   }
 }
