--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "image-webpack-loader": "^3.4.2",
     "loader": "^2.1.1",
     "node-sass": "^4.5.3",
+    "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-svg-inline": "^2.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
