--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
     "html": "^1.0.0",
     "image-webpack-loader": "^3.4.2",
+    "imagemin-webpack-plugin": "^2.0.0",
     "loader": "^2.1.1",
     "node-sass": "^4.5.3",
     "raw-loader": "^0.5.1",
@@ -29,5 +31,8 @@
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0"
+  },
+  "dependencies": {
+    "feather-icons": "^4.5.0"
   }
 }
