--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-2017-new",
+  "name": "connor-dowson-portfolio",
   "version": "1.0.0",
   "description": "Portfolio website for Connor Dowson",
   "main": "index.js",
